# NovaBoosts

./: boosting.py  bot.py  config.json  pyproject.toml  requirements.txt
input/: 1m_tokens.txt
